shesmu-server/src/test/resources/bad/ternaryif-test-is-not-boolean.shesmu
Input gsi_std;

Run ok With { ok = ("string" ? 3 : 4) == 3  }
